# crypto-trading-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  example.env  main.py  main_bybit.py  main_test.py  pyproject.toml
config/: config.yaml
evaluations/: .gitignore
notebooks/: test_pybit_websocket.ipynb
src/: AccountData.py  MarketData.py  TradingModel.py  binance_functions.py
src/backtest/: BacktestAccountData.py  BacktestMarketData.py  BacktestTradingModel.py  run_backtest.py  run_backtest_obsolete.py
src/endpoints/: binance_functions.py  bybit_functions.py  bybit_ws.py  ibkr_functions.py  igm_functions.py
src/helper_functions/: checklist_utils.py  helper_functions.py  statistics.py
src/models/: .gitignore  checklist_model.py  checklist_model_alt.py  checklist_model_conservative_2.py  checklist_model_exploration.py  checklist_model_new_size_limit.py  checklist_model_risky_3.py  checklist_model_safe.py  checklist_model_safecopy.py  checklist_model_target_1.py  checklist_model_test.py  mock_model.py  trading_bot_v1.py
tests/: deprecated_test_AccountData.py  deprecated_test_websockets.py  test_AccountData.py  test_MarketData.py  test_TradingModel.py  test_websockets.py
tests/test_backtest/: test_BacktestAccountData.py  test_BacktestMarketData.py  test_BacktestTradingModel.py
tests/test_helper_functions/: test_helper_functions.py  test_statistics.py
tests/tests_endpoints/: test_binance_functions.py  test_bybit_functions.py  test_igm_functions.py
